@@ -17,19 +17,6 @@ import java.io.IOException;
 
 public class MainFX extends Application {
 
-    /*
-    *   1. Download JavaFX :    https://gluonhq.com/products/javafx/      ... Choose 'JavaFX Windows SDK'
-    *   2. Place where-ever, but a common location would be C:/Program files/java/javafx
-    *   3. Go to File -> Settings -> Appearance & Behavior -> Path Variables. Add new path named: PATH_TO_FX and set location to C:/Program files/java/javafx/lib
-    *   4. If MainFX is already in Configurations, proceed to step 6.
-    *   5. Go to Edit Configuration... and press the + sign top left. Name: MainFX, Main class: TicketService.MainFX.
-    *   4. Add : --module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml    to "Edit Configurations... -> VM Options."
-    *   5. Make sure javafx/lib is in the project libraries. Project Structur -> Libraries
-    *
-    *   Yes, we could do it trough pom, but I was too lazy to do it that way.
-    * */
-
-
     private static MainFX minApplikasjon;
     private Stage primaryStage;
 
